Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I097bac3bd6e774f0cac2eb4b46723f7fa5ec7641

Former-commit-id: 51fbf2cd00336619dc72a3d4c320a6f6d568b87d

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1779,7 +1779,7 @@
     <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"لنقل الملفات والوسائط بين الأجهزة"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"وحدة تخزين محمولة"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"الإعداد لاحقًا"</string>
-    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"هل تريد تنسيق <xliff:g id="NAME">^1</xliff:g>؟"</string>
+    <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"هل تريد تهيئة <xliff:g id="NAME">^1</xliff:g>؟"</string>
     <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"يجب تنسيق <xliff:g id="NAME_0">^1</xliff:g> لتخزين التطبيقات والملفات والوسائط. \n\nسيؤدي التنسيق إلى محو المحتوى الحالي على <xliff:g id="NAME_1">^2</xliff:g>. ولتجنّب فقد المحتوى، يمكنك نسخه احتياطيًا إلى <xliff:g id="NAME_2">^3</xliff:g> أو جهاز آخر."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"تنسيق <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"هل تريد نقل المحتوى إلى <xliff:g id="NAME">^1</xliff:g>؟"</string>
