--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -4276,7 +4276,7 @@
     <string name="zen_mode_when" msgid="5710214762051824755">"Slå på automatisk"</string>
     <string name="zen_mode_when_never" msgid="2537537280091840672">"Aldri"</string>
     <string name="zen_mode_when_every_night" msgid="9018738747936038166">"Hver kveld"</string>
-    <string name="zen_mode_when_weeknights" msgid="531342225633264368">"Kvelder på ukedager"</string>
+    <string name="zen_mode_when_weeknights" msgid="531342225633264368">"Kvelder på hverdager"</string>
     <string name="zen_mode_start_time" msgid="1252665038977523332">"Starttid"</string>
     <string name="zen_mode_end_time" msgid="223502560367331706">"Sluttid"</string>
     <string name="zen_mode_end_time_next_day_summary_format" msgid="419683704068360804">"<xliff:g id="FORMATTED_TIME">%s</xliff:g> neste dag"</string>
