--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -223,7 +223,7 @@
     <string name="app_locale_picker_title" msgid="8423365003726200684">"Јазик на апликациjата"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Предложени јазици"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Сите јазици"</string>
-    <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Јазик на системот"</string>
+    <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Системски јазик"</string>
     <string name="preference_of_system_locale_summary" msgid="5612241394431188535">"Стандардно за системот"</string>
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Не може да се бира јазик за апликацијава од „Поставките“."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Јазикот може да се разликува од јазиците достапни во апликацијата. Некои апликации може да не ја поддржуваат оваа поставка."</string>
