--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -5544,7 +5544,7 @@
     <string name="quick_controls_lower" msgid="6675573610027367819">"controles do dispositivo"</string>
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Cartões e passes"</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"cartões e passes"</string>
-    <string name="power_menu_setting_name" msgid="7291642927216934159">"Aperte o botão liga/desliga e o mantenha pressionado"</string>
+    <string name="power_menu_setting_name" msgid="7291642927216934159">"Aperte e mantenha pressionado o botão liga/desliga"</string>
     <string name="power_menu_summary_long_press_for_assist_enabled" msgid="5322150755041458952">"Aperte o botão e o mantenha pressionado para abrir o Google Assistente"</string>
     <string name="power_menu_summary_long_press_for_assist_disabled_with_power_menu" msgid="5165714995895517816">"Aperte o botão e o mantenha pressionado para abrir o menu liga/desliga"</string>
     <string name="power_menu_summary_long_press_for_assist_disabled_no_action" msgid="2831598484771657432">"A opção de apertar o botão e mantê-lo pressionado não está disponível"</string>
